updated navbar to all html pages

--- a/message.html
+++ b/message.html
@@ -17,28 +17,19 @@
     <title>Skill Swap</title>
 </head>
 <header>
-  <div id="skillshare"><a href="index.html">Skill.Share</a></div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="events.html">Events</a></li>
-     
-      <li id="contact-cta"><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-  <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
-    <div class="bar1"></div>
-    <div class="bar2"></div>
-    <div class="bar3"></div>
-    <ul class="mobile-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services">services</a></li>
-      <li><a href="events.html">Events</a></li>
-   
-      <li id="contact-cta"><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
+  <span class="header-nav" h1 class="skill-swap"><a href="index.html">Skill Swap</a></h1>
+  </span>
+
+<!--Navbar-->
+<nav>
+  <ul class="nav-bar">
+                   <li class="menu"><a href="index.html">Home</a></li>
+                    <li class="menu"><a href="services.html">Services</a></li>
+                  <li class="menu"><a href="contact.html">Contact</a></li>
+                </ul> 
+                </nav>
+                </header>
+  
 </header>
 <main>
 hi
