restructured file directory

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <!-- link to stylesheet-->
     <link rel="stylesheet" href="css/assets/style.css">
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+     <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
    
      
   
@@ -87,6 +87,5 @@ hi
 <h6>Disclaimer: this is a fictional service in partial fulfilment of a project portfolio for a Diploma in Full Stack Software Development at the Code Institute</p>
 </div>
 </footer>
-  <script src="index.js"></script>
 </body>
   </html>
