--- a/events.html
+++ b/events.html
@@ -11,7 +11,7 @@
     <!-- link to stylesheet-->
     <link rel="stylesheet" href="css/assets/style.css">
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+     <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
 </head>
 
   <body>
@@ -19,7 +19,19 @@
      
     </header>
     <main>
-hi
+hi  <span class="header-nav" h1 class="skill-swap"><a href="index.html">Skill Swap</a></h1>
+</span>
+
+<!--Navbar-->
+<nav>
+<ul class="nav-bar">
+                 <li class="menu"><a href="index.html">Home</a></li>
+                  <li class="menu"><a href="services.html">Services</a></li>
+                <li class="menu"><a href="contact.html">Contact</a></li>
+              </ul> 
+              </nav>
+              </header>
+
     </main>
 
     <section>
@@ -74,8 +86,6 @@ hi
 </div>
 </footer>
 </footer>
-
-        <script src="index.js"></script>
     </body>
   </html>
     
