--- a/message.html
+++ b/message.html
@@ -8,11 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Skill share free community employment service">
     <meta name="keywords" content="skill share, skill up, lifelong learning, back to work, employment help, free training, free I.T skills training, mentor, United Kingdom">
-    <!-- link to stylesheet-->
+    <!-- link to my stylesheet-->
     <link rel="stylesheet" href="css/assets/style.css">
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-
+     <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
     <!-- Website title-->
     <title>Skill Swap</title>
 </head>
