--- a/thankyou.html
+++ b/thankyou.html
@@ -11,35 +11,25 @@
     <!-- link to stylesheet-->
     <link rel="stylesheet" href="css/assets/style.css">
      <!-- Font Awesome -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+     <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
    
     <!-- Website title-->
     <title>Skill Swap</title>
 </head>
 <header>
-  <div id="skillshare"><a href="index.html">Skill.Share</a></div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="events.html">Events</a></li>
-     
-      <li id="contact-cta"><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-  <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
-    <div class="bar1"></div>
-    <div class="bar2"></div>
-    <div class="bar3"></div>
-    <ul class="mobile-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services">services</a></li>
-      <li><a href="events.html">Events</a></li>
-   
-      <li id="contact-cta"><a href="contact.html">Contact</a></li>
-    </ul>
-  </div>
-</header>
+  <span class="header-nav" h1 class="skill-swap"><a href="index.html">Skill Swap</a></h1>
+  </span>
+
+<!--Navbar-->
+<nav>
+  <ul class="nav-bar">
+                   <li class="menu"><a href="index.html">Home</a></li>
+                    <li class="menu"><a href="services.html">Services</a></li>
+                  <li class="menu"><a href="contact.html">Contact</a></li>
+                </ul> 
+                </nav>
+                </header>
+  
 <main>
 hi
 </main>
@@ -66,7 +56,5 @@ hi
 <h6>Disclaimer: this is a fictional service in partial fulfilment of a project portfolio for a Diploma in Full Stack Software Development at the Code Institute</p>
 </div>
 </footer>
-   
-   <script src="index.js"></script>
 </body>
 </html>
