solved missing images due to location change.

--- a/events.html
+++ b/events.html
@@ -2,41 +2,39 @@
 <html lang="en">
 
 <head>
-
+   
     <!-- Meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Skill share free community employment service">
     <meta name="keywords" content="skill share, skill up, lifelong learning, back to work, employment help, free training, free I.T skills training, mentor, United Kingdom">
-    <!-- link to stylesheet-->
-    <link rel="stylesheet" href="css/assets/style.css">
-     <!-- Font Awesome -->
+   
+     <!-- Font Awesome Script -->
      <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
+      <!-- link to my CSS stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
   <body>
     <header>
-     
-    </header>
-    <main>
-hi  <span class="header-nav" h1 class="skill-swap"><a href="index.html">Skill Swap</a></h1>
-</span>
+          <span class="flex">
+      
+     <a href="index.html"> <h1 class="skill-share"> Skill Share</h1></a>
+    </span>
 
-<!--Navbar-->
-<nav>
-<ul class="nav-bar">
-                 <li class="menu"><a href="index.html">Home</a></li>
-                  <li class="menu"><a href="services.html">Services</a></li>
-                <li class="menu"><a href="contact.html">Contact</a></li>
-              </ul> 
-              </nav>
-              </header>
-
-    </main>
-
+  <!--Navbar-->
+  <nav>
+    <ul class="flex-column">
+                     <li class="column menu"><a href="index.html/">Home</a></li>
+                      <li class="column menu"><a href="events.html/">Events</a></li>
+                    <li class="column menu"><a href="contact.html/">Contact</a></li>
+                  </ul> 
+                  </nav>
+                  </header>
+  
     <section>
 
-    <h1>Events</h1>
+    <h2>Events</h2>
     <main>
     <p class="events">
         We reach out to companies and hear directly from those working in
