"updated global styles format"

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
     
 
 <main> <!--Hero image-->
-<section id="hero">
+<section>
 <div class="container">
-   <div class="center">
+  <div class="hero"></div>
+    <div class="center">
+      
       <h2>Struggling for work?</h2>
       <p>We can help</p>
-      <button class="cta-btn"><a href="services.html">Learn more</a></button>
-      </p>
+      <p><button class="btn cta"><a href="services.html">Learn more</a></button></p>
     </div>
 </div>
 </div>
@@ -50,8 +51,8 @@
       <section>        
   <div class="container-text">
     <h2 class="center" id="about">About us</h2>
-    <div class="center">
-      <img src="/assets/images/Jess_profile_photo.jpeg" alt="Jess Smyth, founder of Skill Share, sat at an office desk">
+    <div class="split">
+      <img id="founder" src="/assets/images/Jess_profile_photo.jpeg" alt="Jess Smyth, founder of Skill Share, sat at an office desk">
   </div>
     <div class="split">
         <p> My name is Jess Smyth.  I founded Skill Share in 2017 after struggling to find work.
