contact form layout

--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
                   </header>
     
 <section id="contact-us">
-  <form action="/thankyou.html" target="_self" method="post">
-  <form class="contact-form">
+  <form action="/thankyou.html" target="_self" method="post"
+  form class="contact-form">
     <div class="form-header">
       <h2>Contact us</h2>
     </div>
