--- a/contact.html
+++ b/contact.html
@@ -32,30 +32,56 @@
                   </nav>
                   </header>
     
-<section id="contact-us">
-  <form action="/thankyou.html" target="_self" method="post"
-  form class="contact-form">
+<section class="form-container">
+  <form action="/thankyou.html" target="_self" method="post">
     <div class="form-header">
-      <h2>Contact us</h2>
+      <form>
+        <ul class="flex-wrapper">
+          <li>
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" placeholder="Enter your first name" required>
+          </li>
+          <li>
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" placeholder="Enter your surname" required>
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email address" required>
+          </li>
+          <li>
+            <label for="phone">Phone</label>
+            <input type="tel" id="phone" placeholder="Enter your phone number">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea rows="6" id="message" placeholder="Enter your message here" required></textarea>
+          </li>
+          <li>
+            <p>Please tick the boxes for ways we can contact you</p>
+            <ul class="flex-inner-wrap">
+              <li>
+                <input type="checkbox" id="phone">
+                <label for="phone">Phone</label>
+              </li>
+              <li>
+                <input type="checkbox" id="E-mail">
+                <label for="E-mail">E-mail</label>
+              </li>
+              <li>
+                <input type="checkbox" id="text">
+                <label for="text">Test</label>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <button type="submit">Submit</button>
+          </li>
+        </ul>
+      </form>
     </div>
-<div class="form-content">
-  <div class="row"></div>
-  <div class="form-input">
-    <label>First Name</label>
-    <input type="text" placholder="Enter your first name">
-    </div>
-    <div class="form-input">
-      <label>Last Name</label>
-      <input type="text" placholder="Enter your last name">
-    </div>
-  </div>
 </div>
-
   </form>
-
-</section>
-
-<footer>
 
 </footer>
 
