--- a/contact.html
+++ b/contact.html
@@ -46,15 +46,15 @@
             <input type="text" id="last-name" placeholder="Enter your surname" required>
           </li>
           <li>
-            <label for="email">Email</label>
+            <label for="email">email</label>
             <input type="email" id="email" placeholder="Enter your email address" required>
           </li>
           <li>
-            <label for="phone">Phone</label>
+            <label for="phone">phone</label>
             <input type="tel" id="phone" placeholder="Enter your phone number">
           </li>
           <li>
-            <label for="message">Message</label>
+            <label for="message">message</label>
             <textarea rows="6" id="message" placeholder="Enter your message here" required></textarea>
           </li>
           <li>
