changed to fontawesome CDN. Added media query to homepage for more accurate responsiveness

--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="skill share, skill up, lifelong learning, back to work, employment help, free training, free I.T skills training, mentor, United Kingdom">
    
      <!-- Font Awesome Script -->
-     <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
       <!-- link to my CSS stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
