--- a/message.html
+++ b/message.html
@@ -11,7 +11,7 @@
     <!-- link to my stylesheet-->
     <link rel="stylesheet" href="css/assets/style.css">
      <!-- Font Awesome -->
-     <script src="https://kit.fontawesome.com/175b4fbc96.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <!-- Website title-->
     <title>Skill Swap</title>
 </head>
